[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/terrain/floor/Blocks/tileset_v1.tres" type="TileSet" id=1]
[ext_resource path="res://Terrain/Terrain.gd" type="Script" id=2]

[node name="Terrain" type="Node2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )

[node name="TileMap_lvl0" type="TileMap" parent="."]
mode = 1
tile_set = ExtResource( 1 )
cell_size = Vector2( 160, 80 )
cell_y_sort = true
centered_textures = true
format = 1
tile_data = PoolIntArray( -524266, 233, 0, -524265, 233, 0, -524264, 233, 0, -524263, 233, 0, -524262, 233, 0, -524261, 233, 0, -524260, 233, 0, -524259, 233, 0, -524258, 233, 0, -524257, 233, 0, -458730, 233, 0, -458729, 233, 0, -458728, 233, 0, -458727, 233, 0, -458726, 233, 0, -458725, 233, 0, -458724, 233, 0, -458723, 233, 0, -458722, 233, 0, -458721, 233, 0, -393193, 235, 0, -393192, 235, 0, -393191, 235, 0, -393190, 233, 0, -393189, 233, 0, -393188, 233, 0, -393187, 235, 0, -393186, 235, 0, -393185, 233, 0, -327657, 235, 0, -327656, 235, 0, -327655, 233, 0, -327654, 235, 0, -327653, 235, 0, -327652, 235, 0, -327651, 235, 0, -327650, 235, 0, -327649, 233, 0, -262122, 233, 0, -262121, 235, 0, -262120, 235, 0, -262119, 233, 0, -262118, 233, 0, -262117, 235, 0, -262116, 233, 0, -262115, 235, 0, -262114, 235, 0, -262113, 233, 0, -196586, 233, 0, -196585, 235, 0, -196584, 235, 0, -196583, 233, 0, -196582, 236, 0, -196581, 233, 0, -196580, 233, 0, -196579, 233, 0, -196578, 235, 0, -196577, 233, 0, -131050, 233, 0, -131049, 235, 0, -131048, 235, 0, -131047, 233, 0, -131046, 235, 0, -131045, 233, 0, -131044, 235, 0, -131043, 235, 0, -131042, 235, 0, -131041, 233, 0, -65515, 252, 0, -65514, 609, 0, -65513, 609, 0, -65512, 233, 0, -65511, 233, 0, -65510, 235, 0, -65509, 233, 0, -65508, 235, 0, -65507, 235, 0, -65506, 236, 0, -65505, 233, 0, 21, 252, 0, 23, 609, 0, 24, 609, 0, 25, 233, 0, 26, 235, 0, 27, 236, 0, 28, 235, 0, 29, 235, 0, 30, 236, 0, 31, 233, 0, 65557, 252, 0, 65559, 609, 0, 65560, 609, 0, 65561, 609, 0, 65562, 233, 0, 65563, 235, 0, 65564, 235, 0, 65565, 235, 0, 65566, 236, 0, 65567, 609, 0, 131093, 252, 0, 131095, 609, 0, 131096, 609, 0, 131097, 609, 0, 131098, 235, 0, 131099, 609, 0, 131100, 233, 0, 131101, 235, 0, 131102, 236, 0, 131103, 233, 0, 196631, 609, 0, 196632, 609, 0, 196633, 609, 0, 196634, 235, 0, 196635, 233, 0, 196636, 235, 0, 196637, 609, 0, 196638, 236, 0, 196639, 233, 0, 262166, 233, 0, 262167, 609, 0, 262168, 609, 0, 262169, 233, 0, 262170, 233, 0, 262171, 236, 0, 262172, 235, 0, 262173, 235, 0, 262174, 236, 0, 262175, 233, 0, 327702, 609, 0, 327703, 609, 0, 327704, 233, 0, 327705, 233, 0, 327706, 233, 0, 327707, 235, 0, 327708, 235, 0, 327709, 235, 0, 327710, 236, 0, 327711, 233, 0, 393238, 233, 0, 393239, 233, 0, 393240, 233, 0, 393241, 233, 0, 393242, 235, 0, 393243, 233, 0, 393244, 235, 0, 393245, 235, 0, 393246, 236, 0, 393247, 233, 0, 458774, 233, 0, 458775, 233, 0, 458776, 233, 0, 458777, 233, 0, 458778, 233, 0, 458779, 233, 0, 458780, 235, 0, 458781, 235, 0, 458782, 236, 0, 458783, 233, 0, 524311, 233, 0, 524312, 235, 0, 524313, 235, 0, 524314, 235, 0, 524315, 235, 0, 524316, 235, 0, 524317, 235, 0, 524318, 235, 0, 524319, 233, 0, 589847, 233, 0, 589848, 235, 0, 589849, 235, 0, 589850, 235, 0, 589851, 235, 0, 589852, 235, 0, 589853, 235, 0, 589854, 235, 0, 589855, 233, 0, 655383, 235, 0, 655384, 235, 0, 655385, 235, 0, 655386, 235, 0, 655387, 235, 0, 655388, 235, 0, 655389, 235, 0, 655390, 235, 0, 655391, 233, 0, 720902, 233, 0, 720903, 233, 0, 720904, 107, 0, 720905, 107, 0, 720906, 107, 0, 720907, 107, 0, 720918, 233, 0, 720919, 233, 0, 720920, 233, 0, 720921, 233, 0, 720922, 233, 0, 720923, 233, 0, 720924, 233, 0, 720925, 233, 0, 720926, 233, 0, 720927, 233, 0, 851952, 609, 0, 851953, 233, 0, 851954, 233, 0, 851955, 233, 0, 851956, 233, 0, 851957, 233, 0, 851958, 233, 0, 851959, 233, 0, 851960, 233, 0, 851961, 233, 0, 851962, 233, 0, 851963, 233, 0, 851964, 233, 0, 851965, 233, 0, 851966, 233, 0, 851967, 233, 0, 786432, 233, 0, 786433, 233, 0, 786434, 233, 0, 786435, 233, 0, 786436, 233, 0, 786437, 233, 0, 786438, 233, 0, 786439, 233, 0, 786440, 233, 0, 786441, 233, 0, 786442, 233, 0, 786443, 233, 0, 786444, 233, 0, 786445, 233, 0, 786446, 233, 0, 786447, 233, 0, 786448, 233, 0, 786449, 233, 0, 786450, 233, 0, 786451, 233, 0, 786452, 233, 0, 786453, 233, 0, 786454, 233, 0, 786455, 233, 0, 786456, 233, 0, 786457, 233, 0, 786458, 233, 0, 786459, 233, 0, 786460, 233, 0, 786461, 233, 0, 786462, 233, 0, 786463, 233, 0 )

[node name="TileMap_lvl1" type="TileMap" parent="."]
visible = false
mode = 1
tile_set = ExtResource( 1 )
cell_size = Vector2( 160, 80 )
centered_textures = true
format = 1
tile_data = PoolIntArray( -589812, 109, 0, -589811, 109, 0, -589810, 109, 0, -589809, 109, 0, -589808, 109, 0, -589807, 109, 0, -589806, 109, 0, -589805, 109, 0, -589804, 483, 0, -458768, 486, 0, -458767, 103, 0, -458766, 103, 0, -458765, 103, 0, -458764, 103, 0, -458763, 103, 0, -458762, 103, 0, -458761, 103, 0, -458760, 103, 0, -458759, 103, 0, -458758, 104, 0, -458757, 104, 0, -458756, 104, 0, -458755, 104, 0, -458754, 104, 0, -458753, 104, 0, -524288, 104, 0, -524287, 105, 0, -524286, 105, 0, -524285, 105, 0, -524284, 105, 0, -524283, 105, 0, -524282, 105, 0, -524281, 105, 0, -524280, 105, 0, -524279, 105, 0, -524278, 105, 0, -524277, 105, 0, -524276, 106, 0, -524275, 106, 0, -524274, 106, 0, -524273, 105, 0, -524272, 105, 0, -524271, 105, 0, -524270, 105, 0, -524269, 105, 0, -524268, 108, 0, -393232, 486, 0, -393231, 103, 0, -393230, 103, 0, -393229, 103, 0, -393228, 103, 0, -393227, 103, 0, -393226, 486, 0, -393225, 103, 0, -393224, 103, 0, -393223, 103, 0, -393222, 104, 0, -393221, 104, 0, -393220, 486, 0, -393219, 104, 0, -393218, 104, 0, -393217, 104, 0, -458752, 104, 0, -458751, 105, 0, -458750, 486, 0, -458749, 105, 0, -458748, 105, 0, -458747, 105, 0, -458746, 105, 0, -458745, 105, 0, -458744, 486, 0, -458743, 105, 0, -458742, 105, 0, -458741, 105, 0, -458740, 105, 0, -458739, 105, 0, -458738, 486, 0, -458737, 105, 0, -458736, 105, 0, -458735, 105, 0, -458734, 105, 0, -458733, 105, 0, -458732, 108, 0, -458731, 416, 0, -327696, 486, 0, -327695, 103, 0, -327694, 103, 0, -327693, 103, 0, -327692, 103, 0, -327691, 103, 0, -327690, 486, 0, -327689, 103, 0, -327688, 103, 0, -327687, 103, 0, -327686, 104, 0, -327685, 104, 0, -327684, 486, 0, -327683, 104, 0, -327682, 104, 0, -327681, 104, 0, -393216, 104, 0, -393215, 105, 0, -393214, 486, 0, -393213, 105, 0, -393212, 105, 0, -393211, 105, 0, -393210, 105, 0, -393209, 105, 0, -393208, 486, 0, -393207, 105, 0, -393206, 105, 0, -393205, 105, 0, -393204, 105, 0, -393203, 105, 0, -393202, 486, 0, -393201, 105, 0, -393200, 105, 0, -393199, 105, 0, -393198, 105, 0, -393197, 105, 0, -393196, 108, 0, -393195, 416, 0, -393194, 416, 0, -262160, 486, 0, -262159, 103, 0, -262158, 103, 0, -262157, 103, 0, -262156, 103, 0, -262155, 103, 0, -262154, 486, 0, -262153, 103, 0, -262152, 103, 0, -262151, 103, 0, -262150, 103, 0, -262149, 104, 0, -262148, 486, 0, -262147, 104, 0, -262146, 104, 0, -262145, 104, 0, -327680, 104, 0, -327679, 105, 0, -327678, 486, 0, -327677, 105, 0, -327676, 105, 0, -327675, 105, 0, -327674, 105, 0, -327673, 105, 0, -327672, 486, 0, -327671, 105, 0, -327670, 105, 0, -327669, 105, 0, -327668, 105, 0, -327667, 105, 0, -327666, 486, 0, -327665, 105, 0, -327664, 105, 0, -327663, 105, 0, -327662, 105, 0, -327661, 105, 0, -327660, 108, 0, -327659, 416, 0, -196624, 486, 0, -196623, 103, 0, -196622, 103, 0, -196621, 103, 0, -196620, 103, 0, -196619, 103, 0, -196618, 103, 0, -196617, 103, 0, -196616, 103, 0, -196615, 103, 0, -196614, 103, 0, -196613, 104, 0, -196612, 486, 0, -196611, 104, 0, -196610, 104, 0, -196609, 104, 0, -262144, 104, 0, -262143, 105, 0, -262142, 486, 0, -262141, 105, 0, -262140, 105, 0, -262139, 105, 0, -262138, 105, 0, -262137, 105, 0, -262136, 486, 0, -262135, 105, 0, -262134, 105, 0, -262133, 105, 0, -262132, 105, 0, -262131, 105, 0, -262130, 486, 0, -262129, 105, 0, -262128, 105, 0, -262127, 105, 0, -262126, 105, 0, -262125, 105, 0, -262124, 108, 0, -131088, 486, 0, -131087, 103, 0, -131086, 103, 0, -131085, 103, 0, -131084, 103, 0, -131083, 103, 0, -131082, 103, 0, -131081, 103, 0, -131080, 103, 0, -131079, 103, 0, -131078, 103, 0, -131077, 104, 0, -131076, 486, 0, -131075, 104, 0, -131074, 104, 0, -131073, 104, 0, -196608, 104, 0, -196607, 105, 0, -196606, 486, 0, -196605, 105, 0, -196604, 105, 0, -196603, 105, 0, -196602, 105, 0, -196601, 105, 0, -196600, 486, 0, -196599, 105, 0, -196598, 105, 0, -196597, 105, 0, -196596, 105, 0, -196595, 480, 0, -196594, 486, 0, -196593, 105, 0, -196592, 105, 0, -196591, 105, 0, -196590, 105, 0, -196589, 486, 0, -196588, 108, 0, -65552, 486, 0, -65551, 103, 0, -65550, 103, 0, -65549, 103, 0, -65548, 103, 0, -65547, 103, 0, -65546, 103, 0, -65545, 103, 0, -65544, 103, 0, -65543, 103, 0, -65542, 103, 0, -65541, 104, 0, -65540, 104, 0, -65539, 104, 0, -65538, 104, 0, -65537, 104, 0, -131072, 104, 0, -131071, 105, 0, -131070, 105, 0, -131069, 105, 0, -131068, 105, 0, -131067, 105, 0, -131066, 105, 0, -131065, 105, 0, -131064, 105, 0, -131063, 105, 0, -131062, 105, 0, -131061, 105, 0, -131060, 105, 0, -131059, 105, 0, -131058, 105, 0, -131057, 105, 0, -131056, 105, 0, -131055, 105, 0, -131054, 105, 0, -131053, 105, 0, -131052, 485, 0, -16, 486, 0, -15, 103, 0, -14, 103, 0, -13, 103, 0, -12, 103, 0, -11, 103, 0, -10, 103, 0, -9, 103, 0, -8, 103, 0, -7, 103, 0, -6, 103, 0, -5, 104, 0, -4, 104, 0, -3, 104, 0, -2, 104, 0, -1, 104, 0, -65536, 104, 0, -65535, 105, 0, -65534, 105, 0, -65533, 105, 0, -65532, 105, 0, -65531, 105, 0, -65530, 105, 0, -65529, 105, 0, -65528, 105, 0, -65527, 105, 0, -65526, 105, 0, -65525, 105, 0, -65524, 105, 0, -65523, 103, 0, -65522, 103, 0, -65521, 103, 0, -65520, 103, 0, -65519, 105, 0, -65518, 103, 0, -65517, 103, 0, -65516, 103, 0, -65515, 252, 0, 65520, 486, 0, 65521, 103, 0, 65522, 431, 0, 65523, 103, 0, 65524, 431, 0, 65525, 103, 0, 65526, 415, 0, 65527, 103, 0, 65528, 103, 0, 65529, 415, 0, 65530, 103, 0, 65531, 104, 0, 65532, 415, 0, 65533, 104, 0, 65534, 104, 0, 65535, 415, 0, 0, 104, 0, 1, 105, 0, 2, 415, 0, 3, 105, 0, 4, 105, 0, 5, 415, 0, 6, 105, 0, 7, 105, 0, 8, 415, 0, 9, 105, 0, 10, 105, 0, 11, 415, 0, 12, 105, 0, 13, 103, 0, 14, 416, 0, 15, 103, 0, 16, 103, 0, 17, 416, 0, 18, 103, 0, 19, 103, 0, 20, 416, 0, 21, 252, 0, 131056, 486, 0, 131057, 103, 0, 131058, 103, 0, 131059, 103, 0, 131060, 103, 0, 131061, 415, 0, 131062, 415, 0, 131063, 415, 0, 131064, 415, 0, 131065, 415, 0, 131066, 415, 0, 131067, 415, 0, 131068, 415, 0, 131069, 415, 0, 131070, 415, 0, 131071, 415, 0, 65536, 415, 0, 65537, 415, 0, 65538, 415, 0, 65539, 415, 0, 65540, 415, 0, 65541, 415, 0, 65542, 415, 0, 65543, 415, 0, 65544, 415, 0, 65545, 415, 0, 65546, 415, 0, 65547, 415, 0, 65548, 415, 0, 65549, 415, 0, 65550, 416, 0, 65551, 415, 0, 65552, 415, 0, 65553, 416, 0, 65554, 415, 0, 65555, 415, 0, 65556, 416, 0, 65557, 252, 0, 196592, 486, 0, 196593, 103, 0, 196594, 431, 0, 196595, 103, 0, 196596, 431, 0, 196597, 103, 0, 196598, 415, 0, 196599, 103, 0, 196600, 103, 0, 196601, 415, 0, 196602, 103, 0, 196603, 104, 0, 196604, 415, 0, 196605, 104, 0, 196606, 104, 0, 196607, 415, 0, 131072, 104, 0, 131073, 105, 0, 131074, 415, 0, 131075, 105, 0, 131076, 105, 0, 131077, 415, 0, 131078, 105, 0, 131079, 105, 0, 131080, 415, 0, 131081, 105, 0, 131082, 105, 0, 131083, 415, 0, 131084, 105, 0, 131085, 105, 0, 131086, 415, 0, 131087, 103, 0, 131088, 103, 0, 131089, 415, 0, 131090, 103, 0, 131091, 103, 0, 131092, 415, 0, 131093, 252, 0, 262128, 486, 0, 262129, 103, 0, 262130, 103, 0, 262131, 103, 0, 262132, 103, 0, 262133, 103, 0, 262134, 103, 0, 262135, 103, 0, 262136, 103, 0, 262137, 103, 0, 262138, 103, 0, 262139, 104, 0, 262140, 104, 0, 262141, 104, 0, 262142, 104, 0, 262143, 104, 0, 196608, 104, 0, 196609, 105, 0, 196610, 105, 0, 196611, 105, 0, 196612, 105, 0, 196613, 105, 0, 196614, 105, 0, 196615, 105, 0, 196616, 105, 0, 196617, 105, 0, 196618, 105, 0, 196619, 105, 0, 196620, 105, 0, 196621, 104, 0, 196622, 104, 0, 196623, 104, 0, 196624, 104, 0, 196625, 104, 0, 196626, 104, 0, 196627, 483, 0, 196628, 103, 0, 196629, 252, 0, 327664, 486, 0, 327665, 103, 0, 327666, 103, 0, 327667, 103, 0, 327668, 103, 0, 327669, 103, 0, 327670, 103, 0, 327671, 103, 0, 327672, 103, 0, 327673, 103, 0, 327674, 103, 0, 327675, 104, 0, 327676, 104, 0, 327677, 104, 0, 327678, 104, 0, 327679, 104, 0, 262144, 104, 0, 262145, 105, 0, 262146, 105, 0, 262147, 103, 0, 262148, 105, 0, 262149, 105, 0, 262150, 105, 0, 262151, 105, 0, 262152, 105, 0, 262153, 105, 0, 262154, 105, 0, 262155, 105, 0, 262156, 105, 0, 262157, 105, 0, 262158, 105, 0, 262159, 105, 0, 262160, 105, 0, 262161, 105, 0, 262162, 105, 0, 262163, 105, 0, 262164, 485, 0, 393200, 486, 0, 393201, 103, 0, 393202, 103, 0, 393203, 103, 0, 393204, 103, 0, 393205, 103, 0, 393206, 103, 0, 393207, 103, 0, 393208, 103, 0, 393209, 103, 0, 393210, 104, 0, 393211, 104, 0, 393212, 486, 0, 393213, 104, 0, 393214, 104, 0, 393215, 104, 0, 327680, 104, 0, 327681, 105, 0, 327682, 486, 0, 327683, 105, 0, 327684, 105, 0, 327685, 105, 0, 327686, 105, 0, 327687, 105, 0, 327688, 486, 0, 327689, 105, 0, 327690, 105, 0, 327691, 105, 0, 327692, 105, 0, 327693, 105, 0, 327694, 486, 0, 327695, 105, 0, 327696, 105, 0, 327697, 105, 0, 327698, 105, 0, 327699, 105, 0, 327700, 108, 0, 458736, 486, 0, 458737, 103, 0, 458738, 103, 0, 458739, 103, 0, 458740, 103, 0, 458741, 103, 0, 458742, 103, 0, 458743, 103, 0, 458744, 103, 0, 458745, 103, 0, 458746, 104, 0, 458747, 104, 0, 458748, 486, 0, 458749, 104, 0, 458750, 104, 0, 458751, 104, 0, 393216, 104, 0, 393217, 104, 0, 393218, 486, 0, 393219, 105, 0, 393220, 105, 0, 393221, 105, 0, 393222, 105, 0, 393223, 105, 0, 393224, 486, 0, 393225, 105, 0, 393226, 105, 0, 393227, 105, 0, 393228, 105, 0, 393229, 105, 0, 393230, 486, 0, 393231, 105, 0, 393232, 105, 0, 393233, 105, 0, 393234, 105, 0, 393235, 105, 0, 393236, 108, 0, 524272, 486, 0, 524273, 103, 0, 524274, 103, 0, 524275, 103, 0, 524276, 103, 0, 524277, 103, 0, 524278, 486, 0, 524279, 103, 0, 524280, 103, 0, 524281, 103, 0, 524282, 104, 0, 524283, 104, 0, 524284, 486, 0, 524285, 104, 0, 524286, 104, 0, 524287, 104, 0, 458752, 104, 0, 458753, 104, 0, 458754, 486, 0, 458755, 105, 0, 458756, 105, 0, 458757, 105, 0, 458758, 105, 0, 458759, 105, 0, 458760, 486, 0, 458761, 105, 0, 458762, 105, 0, 458763, 105, 0, 458764, 105, 0, 458765, 105, 0, 458766, 486, 0, 458767, 105, 0, 458768, 105, 0, 458769, 105, 0, 458770, 105, 0, 458771, 105, 0, 458772, 239, 0, 458773, 415, 0, 589808, 486, 0, 589809, 103, 0, 589810, 103, 0, 589811, 103, 0, 589812, 103, 0, 589813, 103, 0, 589814, 486, 0, 589815, 103, 0, 589816, 103, 0, 589817, 103, 0, 589818, 104, 0, 589819, 104, 0, 589820, 486, 0, 589821, 104, 0, 589822, 104, 0, 589823, 104, 0, 524288, 104, 0, 524289, 105, 0, 524290, 486, 0, 524291, 105, 0, 524292, 105, 0, 524293, 105, 0, 524294, 105, 0, 524295, 105, 0, 524296, 486, 0, 524297, 105, 0, 524298, 105, 0, 524299, 105, 0, 524300, 105, 0, 524301, 105, 0, 524302, 486, 0, 524303, 105, 0, 524304, 105, 0, 524305, 105, 0, 524306, 105, 0, 524307, 105, 0, 524308, 108, 0, 524309, 108, 0, 524310, 416, 0, 655344, 486, 0, 655345, 103, 0, 655346, 103, 0, 655347, 103, 0, 655348, 103, 0, 655349, 103, 0, 655350, 486, 0, 655351, 103, 0, 655352, 103, 0, 655353, 103, 0, 655354, 104, 0, 655355, 104, 0, 655356, 486, 0, 655357, 104, 0, 655358, 104, 0, 655359, 104, 0, 589824, 104, 0, 589825, 105, 0, 589826, 486, 0, 589827, 105, 0, 589828, 105, 0, 589829, 105, 0, 589830, 105, 0, 589831, 105, 0, 589832, 486, 0, 589833, 105, 0, 589834, 105, 0, 589835, 105, 0, 589836, 105, 0, 589837, 105, 0, 589838, 486, 0, 589839, 105, 0, 589840, 105, 0, 589841, 105, 0, 589842, 105, 0, 589843, 105, 0, 589844, 108, 0, 589845, 416, 0, 720880, 103, 0, 720881, 103, 0, 720882, 103, 0, 720883, 103, 0, 720884, 103, 0, 720885, 103, 0, 720886, 103, 0, 720887, 103, 0, 720888, 103, 0, 720889, 103, 0, 720890, 104, 0, 720891, 104, 0, 720892, 104, 0, 720893, 104, 0, 720894, 104, 0, 720895, 104, 0, 655360, 104, 0, 655361, 104, 0, 655362, 105, 0, 655363, 105, 0, 655364, 105, 0, 655365, 105, 0, 655366, 105, 0, 655367, 105, 0, 655368, 105, 0, 655369, 105, 0, 655370, 105, 0, 655371, 105, 0, 655372, 105, 0, 655373, 105, 0, 655374, 105, 0, 655375, 105, 0, 655376, 105, 0, 655377, 105, 0, 655378, 105, 0, 655379, 480, 0, 655380, 108, 0, 786415, 483, 0, 786416, 107, 0, 786417, 107, 0, 786418, 107, 0, 786419, 107, 0, 786420, 107, 0, 786421, 107, 0, 786422, 107, 0, 786423, 107, 0, 786424, 107, 0, 786425, 107, 0, 786426, 107, 0, 786427, 107, 0, 786428, 107, 0, 786429, 107, 0, 786430, 107, 0, 786431, 107, 0, 720896, 107, 0, 720897, 107, 0, 720898, 107, 0, 720899, 107, 0, 720900, 107, 0, 720901, 107, 0, 720902, 107, 0, 720903, 107, 0, 720904, 107, 0, 720905, 107, 0, 720906, 107, 0, 720907, 107, 0, 720908, 107, 0, 720909, 107, 0, 720910, 107, 0, 720911, 107, 0, 720912, 107, 0, 720913, 107, 0, 720914, 107, 0, 720915, 107, 0, 720916, 483, 0 )

[node name="TileMap_lvl2" type="TileMap" parent="."]
visible = false
mode = 1
tile_set = ExtResource( 1 )
cell_size = Vector2( 160, 80 )
centered_textures = true
format = 1
tile_data = PoolIntArray( -589842, 483, 0, -589841, 109, 0, -589840, 109, 0, -589839, 109, 0, -589838, 109, 0, -589837, 109, 0, -589836, 109, 0, -589835, 109, 0, -589834, 109, 0, -589833, 109, 0, -589832, 109, 0, -589831, 109, 0, -589830, 109, 0, -589829, 109, 0, -589828, 109, 0, -589827, 109, 0, -589826, 109, 0, -589825, 109, 0, -655360, 109, 0, -655359, 109, 0, -655358, 109, 0, -655357, 109, 0, -655356, 109, 0, -655355, 109, 0, -655354, 109, 0, -655353, 109, 0, -655352, 109, 0, -655351, 109, 0, -655350, 109, 0, -655349, 109, 0, -655348, 109, 0, -655347, 109, 0, -655346, 109, 0, -655345, 109, 0, -655344, 109, 0, -655343, 109, 0, -655342, 109, 0, -655341, 483, 0, -524306, 110, 0, -524305, 480, 0, -524304, 37, 0, -524303, 37, 0, -524302, 37, 0, -524301, 37, 0, -524300, 37, 0, -524299, 480, 0, -524293, 480, 0, -589823, 480, 0, -589817, 480, 0, -589811, 480, 0, -589806, 480, 0, -589805, 108, 0, -458770, 110, 0, -458769, 193, 0, -524269, 108, 0, -524268, 249, 0, -393234, 110, 0, -393233, 191, 0, -458733, 108, 0, -458732, 416, 0, -458731, 252, 0, -327698, 110, 0, -327691, 482, 0, -393197, 108, 0, -393196, 251, 0, -262162, 110, 0, -327661, 108, 0, -196626, 110, 0, -196625, 224, 0, -262125, 108, 0, -131090, 110, 0, -131089, 480, 0, -131086, 340, 0, -131085, 340, 0, -131084, 340, 0, -131077, 480, 0, -196607, 480, 0, -196601, 480, 0, -196595, 480, 0, -196589, 485, 0, -65554, 110, 0, -65553, 151, 0, -65550, 340, 0, -18, 110, 0, -14, 340, 0, 65518, 110, 0, 65522, 431, 0, 131054, 110, 0, 131058, 340, 0, 196590, 110, 0, 196591, 151, 0, 196594, 340, 0, 262126, 110, 0, 262127, 480, 0, 262130, 340, 0, 262131, 340, 0, 262132, 340, 0, 262139, 480, 0, 196609, 480, 0, 196615, 480, 0, 196621, 480, 0, 196627, 485, 0, 327662, 110, 0, 327663, 24, 0, 262163, 108, 0, 393198, 110, 0, 327699, 108, 0, 458734, 110, 0, 458735, 0, 0, 458741, 482, 0, 393235, 108, 0, 393236, 249, 0, 524270, 110, 0, 524271, 385, 0, 458771, 108, 0, 458772, 416, 0, 458773, 252, 0, 589806, 110, 0, 524307, 108, 0, 524308, 251, 0, 655342, 110, 0, 655343, 480, 0, 655347, 239, 0, 655349, 480, 0, 655355, 480, 0, 589825, 480, 0, 589831, 480, 0, 589837, 480, 0, 589842, 480, 0, 589843, 108, 0, 720878, 483, 0, 720879, 107, 0, 720880, 107, 0, 720881, 107, 0, 720882, 107, 0, 720883, 107, 0, 720884, 107, 0, 720885, 107, 0, 720886, 107, 0, 720887, 107, 0, 720888, 107, 0, 720889, 107, 0, 720890, 107, 0, 720891, 107, 0, 720892, 107, 0, 720893, 107, 0, 720894, 107, 0, 720895, 107, 0, 655360, 107, 0, 655361, 107, 0, 655362, 107, 0, 655363, 107, 0, 655364, 107, 0, 655365, 107, 0, 655366, 107, 0, 655367, 107, 0, 655368, 107, 0, 655369, 107, 0, 655370, 107, 0, 655371, 107, 0, 655372, 107, 0, 655373, 107, 0, 655374, 107, 0, 655375, 107, 0, 655376, 107, 0, 655377, 107, 0, 655378, 107, 0, 655379, 483, 0 )

[node name="TileMap_lvl3" type="TileMap" parent="."]
visible = false
mode = 1
tile_set = ExtResource( 1 )
cell_size = Vector2( 160, 80 )
centered_textures = true
format = 1
tile_data = PoolIntArray( -655378, 109, 0, -655377, 109, 0, -655376, 109, 0, -655375, 109, 0, -655374, 109, 0, -655373, 109, 0, -655372, 109, 0, -655371, 109, 0, -655370, 109, 0, -655369, 109, 0, -655368, 109, 0, -655367, 109, 0, -655366, 109, 0, -655365, 109, 0, -655364, 109, 0, -655363, 109, 0, -655362, 109, 0, -655361, 109, 0, -720896, 109, 0, -720895, 109, 0, -720894, 109, 0, -720893, 109, 0, -720892, 109, 0, -720891, 109, 0, -720890, 109, 0, -720889, 109, 0, -720888, 109, 0, -720887, 109, 0, -720886, 109, 0, -720884, 109, 0, -720883, 109, 0, -720882, 109, 0, -720881, 109, 0, -720880, 109, 0, -720879, 109, 0, -720878, 483, 0, -589843, 110, 0, -589842, 479, 0, -589841, 37, 0, -589840, 37, 0, -589839, 37, 0, -589838, 37, 0, -589837, 37, 0, -589836, 479, 0, -589830, 479, 0, -655360, 479, 0, -655354, 479, 0, -655348, 479, 0, -655343, 479, 0, -524307, 110, 0, -524306, 193, 0, -458771, 110, 0, -524269, 415, 0, -393235, 110, 0, -327699, 110, 0, -262163, 110, 0, -196627, 110, 0, -196626, 479, 0, -196623, 333, 0, -131091, 110, 0, -65555, 110, 0, -19, 110, 0, 65517, 110, 0, 131053, 110, 0, 196589, 110, 0, 196590, 479, 0, 262125, 110, 0, 262126, 75, 0, 327661, 110, 0, 393197, 110, 0, 458733, 110, 0, 393235, 415, 0, 524269, 110, 0, 589805, 110, 0, 589806, 479, 0, 655341, 483, 0 )

[node name="TileMap_lvl4" type="TileMap" parent="."]
visible = false
mode = 1
tile_set = ExtResource( 1 )
cell_size = Vector2( 160, 80 )
centered_textures = true
format = 1
tile_data = PoolIntArray( -720916, 483, 0, -720915, 109, 0, -720914, 109, 0, -720913, 109, 0, -720912, 109, 0, -720911, 109, 0, -720910, 109, 0, -720909, 109, 0, -720908, 109, 0, -720907, 109, 0, -720906, 109, 0, -720905, 109, 0, -720904, 109, 0, -720903, 109, 0, -720902, 109, 0, -720901, 109, 0, -720900, 109, 0, -720899, 109, 0, -720898, 109, 0, -720897, 109, 0, -786432, 109, 0, -786431, 109, 0, -786430, 109, 0, -786429, 109, 0, -786428, 109, 0, -786427, 109, 0, -786426, 109, 0, -786425, 109, 0, -786424, 109, 0, -786423, 109, 0, -786422, 109, 0, -786421, 109, 0, -786420, 109, 0, -786419, 109, 0, -786418, 109, 0, -786417, 109, 0, -786416, 109, 0, -786415, 483, 0, -655380, 110, 0, -655379, 479, 0, -655378, 37, 0, -655377, 37, 0, -655376, 37, 0, -655375, 37, 0, -655374, 37, 0, -655373, 479, 0, -655367, 479, 0, -655361, 479, 0, -720891, 482, 0, -720885, 479, 0, -720880, 482, 0, -589844, 110, 0, -524308, 110, 0, -458772, 110, 0, -393236, 110, 0, -327700, 110, 0, -262164, 110, 0, -262163, 479, 0, -196628, 110, 0, -131092, 110, 0, -65556, 110, 0, -20, 110, 0, 65516, 110, 0, 131052, 110, 0, 131053, 479, 0, 196588, 110, 0, 262124, 110, 0, 327660, 110, 0, 393196, 110, 0, 458732, 110, 0, 524268, 110, 0, 524269, 479, 0, 589804, 483, 0 )
